# network-as-code-labs

./: README.md
IAC_Labs/: .gitignore  CLAUDE.md  LABS.md  dry_run.sh  pyproject.toml  validate.py
IAC_Labs/agent/: assistant.py  mcp_server.py
IAC_Labs/containerlab/: frr_daemons  topology.yaml
IAC_Labs/data/: defaults.yaml  fabric.yaml  overlay.yaml  topology.yaml  underlay.yaml
IAC_Labs/data/services/: interfaces.yaml  networks.yaml  vrfs.yaml
IAC_Labs/deploy/: scrapli_deploy.py
IAC_Labs/docs/: lab1-build-guide.md  lab1-diagram.html  lab2-build-guide.md  lab2-diagram.html  lab3-build-guide.md  lab3-diagram.html  lab4-build-guide.md  lab4-diagram.html  lab5-build-guide.md  lab5-diagram.html  lab6-build-guide.md  lab6-diagram.html  lab7-build-guide.md  lab7-diagram.html  nac-lab-series-overview.html
IAC_Labs/docs/video-scripts/: episode1-intro-and-overview.md  episode2-data-model.md  episode3-validation.md  episode4-config-generation.md  episode5-cicd-pipeline.md  episode6-post-change-testing.md  episode7-drift-detection.md  episode8-ai-integration.md
IAC_Labs/drift/: brownfield_import.py  detect.py  reconcile.py
IAC_Labs/generators/ansible/: inventory.yaml  (+1 more)
IAC_Labs/schemas/: __init__.py  models.py
IAC_Labs/scripts/: backup_configs.py  config_diff.py  fabric_status.py  ping_mesh.py  route_table.py  topology_diagram.py
IAC_Labs/tests/: conftest.py  test_compliance.py  test_format.py  test_semantic.py  test_syntax.py
IAC_Labs/validators/: __init__.py  compliance_validator.py  format_validator.py  semantic_validator.py  syntax_validator.py
(+20 files in other folders)
