[project]
name = "iac-labs"
version = "0.1.0"
description = "Network as Code lab series -- spine-leaf fabric automation with Pydantic, Scrapli, and Jinja2"
requires-python = ">=3.11,<3.14"
dependencies = [
    "anthropic==0.52.0",
    "asyncssh==2.21.0",
    "httpx==0.28.1",
    "mcp==1.9.3",
    "pydantic==2.11.4",
    "pytest==8.3.5",
    "pytest-html==4.1.1",
    "pyyaml==6.0.2",
    "rich==14.0.0",
    "scrapli==2025.1.30",
    "types-pyyaml==6.0.12.20250402",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[dependency-groups]
dev = []
